--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>phyloGenerator2 by willpearse</title>
+    <title>phyloGenerator2</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,50 +16,37 @@
     <div class="wrapper">
       <header>
         <h1>phyloGenerator2</h1>
-        <p>phyloGenerator 2 - automated phylogenetics for brave</p>
-
-        <p class="view"><a href="https://github.com/willpearse/phyloGenerator2">View the Project on GitHub <small>willpearse/phyloGenerator2</small></a></p>
-
-
+        <p>automated phylogenetics for brave</p>
+	
+	<p class="view"><a href="faq.html">FAQ</a> - <a href="http://www.willpearse.com/">Who?</a> - <a href="http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12055/abstract">Citation</a> - <a href="https://groups.google.com/forum/#!forum/phylogenerator-users">Mailing List</a></p>
         <ul>
-          <li><a href="https://github.com/willpearse/phyloGenerator2/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/willpearse/phyloGenerator2/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/willpearse/phyloGenerator2">View On <strong>GitHub</strong></a></li>
+          <li><a href="install.html"><strong>Install</strong></a></li>
+          <li><a href="guide.html"><strong>Guide</strong></a></li>
+	  <li><a href="extending.html"><strong>Extending</strong></a></li>
         </ul>
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>
+  A quick way to make very large phylogenies. If you are unfamiliar with phylogenetics, <a href="http://willpearse.github.io/phyloGenerator">use version 1 of phyloGenerator</a>. <em>pG2</em> is more powerful, but also more dangerous and less forgiving. Version 1 is still supported, still works, and (unlike version 2) is suitable for non-specialists. You have been warned!
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quickstart</h3>
+
+If you're on a Mac or Linux computer:
+
+<pre><code>git clone https://github.com/willpearse/phyloGenerator2.git #get pG2
+sudo gem install bio #install BioRuby
+sudo apt-get install mafft #install MAFFT
+git clone https://github.com/stamatak/standard-raxml.git
+#...then compile and copy binary to somewhere on $PATH as 'raxml'
+./phyloGenerator2/pG_2.rb /full/path/to/param/file #run pG2
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>...or read the installation instructions!</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/willpearse">willpearse</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
