added faq; minor corrections

--- a/extending.html
+++ b/extending.html
@@ -20,9 +20,9 @@
 	
 	<p class="view"><a href="faq.html">FAQ</a> - <a href="http://www.willpearse.com/">Who?</a> - <a href="http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12055/abstract">Citation</a> - <a href="https://groups.google.com/forum/#!forum/phylogenerator-users">Mailing List</a></p>
         <ul>
-          <li><a href="install.html"><strong>Install</strong></a></li>
-          <li><a href="guide.html"><strong>Guide</strong></a></li>
-	  <li><a href="extending.html"><strong>Extending</strong></a></li>
+          <li><a href="install.html"><strong>Install</strong>start here</a></li>
+          <li><a href="guide.html"><strong>Guide</strong>read me</a></li>
+	  <li><a href="extending.html"><strong>Extending</strong>for coders</a></li>
         </ul>
       </header>
       <section>
