--- a/guide.html
+++ b/guide.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -20,15 +21,16 @@
 	
 	<p class="view"><a href="faq.html">FAQ</a> - <a href="http://www.willpearse.com/">Who?</a> - <a href="http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12055/abstract">Citation</a> - <a href="https://groups.google.com/forum/#!forum/phylogenerator-users">Mailing List</a></p>
         <ul>
-          <li><a href="install.html"><strong>Install</strong></a></li>
-          <li><a href="guide.html"><strong>Guide</strong></a></li>
-	  <li><a href="extending.html"><strong>Extending</strong></a></li>
+          <li><a href="install.html"><strong>Install</strong>start here</a></li>
+          <li><a href="guide.html"><strong>Guide</strong>read me</a></li>
+	  <li><a href="extending.html"><strong>Extending</strong>for coders</a></li>
         </ul>
       </header>
       <section>
         <h3><a class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premable</h3>
 	<p>I <em>strongly advise you</em> to check the output from each step of pG2. Building a phylogeny is pointless if you alignment is awful, and using a phylogeny is pointless if you're not confident in the accuracy of that phylogeny (via bootstrapping, replicates, and the like).</p>
 	<p>phyloGenerator2 goes in a different direction to phyloGenerator1: whereas before I went to great pains to neaten output, check what you were doing, and provide a tidy user interface, I don't do that here. This means you get to the good stuff much quicker, but it also means there is a burden on you, as the user, to somewhat understand what you're doing. For example, I don't neaten the RAxML output: you get everything, raw. <a href="http://willpearse.github.io/phyloGenerator/"><em>If you want a single, one-click, ecologist-friendly program please use phyloGenerator1</em></a>, or the <a href="http://cran.r-project.org/web/packages/pez/index.html"><em>phy.build</em> family in <em>pez</em></a>; these options will get you an accurate phylogeny without any fuss, and once you're comfortable with them you're probably ready for phyloGenerator2.</p>
+	<p>Please <a href="faq.html">check the FAQ</a> and read this guide carefully. If you have any questions, please <a href="https://groups.google.com/forum/#!forum/phylogenerator-users">get in touch with me</a>.</p>
         <h3><a class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>New Methods</h3>
 	<h4>Hawkeye</h4>
 	<p>My usual approach to phylogenetics is to build an alignment, identify the sequences in it that are obviously nonsense because they:</p>
