--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	
 	<p class="view"><a href="faq.html">FAQ</a> - <a href="http://www.willpearse.com/">Who?</a> - <a href="http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12055/abstract">Citation</a> - <a href="https://groups.google.com/forum/#!forum/phylogenerator-users">Mailing List</a></p>
         <ul>
-          <li><a href="install.html"><strong>Install</strong></a></li>
-          <li><a href="guide.html"><strong>Guide</strong></a></li>
-	  <li><a href="extending.html"><strong>Extending</strong></a></li>
+          <li><a href="install.html"><strong>Install</strong>start here</a></li>
+          <li><a href="guide.html"><strong>Guide</strong>read me</a></li>
+	  <li><a href="extending.html"><strong>Extending</strong>for coders</a></li>
         </ul>
       </header>
       <section>
@@ -47,6 +47,12 @@ git clone https://github.com/stamatak/standard-raxml.git
 
 <p>...or read the installation instructions!</p>
 
+
+<h3><a class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>General advice</h3>
+<p>
+  Once you've <a href="install.html">installed the program</a>, <a href="guide.html">read through the guide</a>. If you have any questions after that, <a href="faq.html">please check the FAQ</a>. If you then get stuck, please do contact me.
+</p>
+</section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/willpearse">willpearse</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
