Final caveats in place

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h3>
 
 <p>
-  A quick way to make very large phylogenies. If you are unfamiliar with phylogenetics, <a href="http://willpearse.github.io/phyloGenerator">use version 1 of phyloGenerator</a>. <em>pG2</em> is more powerful, but also more dangerous and less forgiving. Version 1 is still supported, still works, and (unlike version 2) is suitable for non-specialists. You have been warned!
+  A quick way to make very large phylogenies. If you are unfamiliar with phylogenetics, <a href="http://willpearse.github.io/phyloGenerator">use version 1 of phyloGenerator</a>. <em>pG2</em> is more powerful, but also more dangerous and less forgiving. Version 1 still builds great phylogenies, is still supported, and (unlike version 2) is suitable for non-specialists. You have been warned! However, if you're interested in building a large phylogeny, please try version 2 out!
 </p>
 
 <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quickstart</h3>
@@ -45,7 +45,7 @@ git clone https://github.com/stamatak/standard-raxml.git
 ./phyloGenerator2/pG_2.rb /full/path/to/param/file #run pG2
 </code></pre>
 
-<p>...or read the installation instructions!</p>
+<p>...or read the <a href="install.html">installation instructions</a>!</p>
 
 
 <h3><a class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>General advice</h3>
